deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    app: web

spec:
  replicas: 3

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
        - name: ramya-container
          image: nginx
          ports:
            - containerPort: 80
