multi-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: ramya-multi-container-pod

spec:
  containers:
    - name: ramya-vegetable-app
      image: ramyar098/vegetable-app
      ports:
        - containerPort: 3000

    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
