http.route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ramya-httproute
  namespace: ramya-ns
spec:
  parentRefs:
    - name: ramya-gateway
      sectionName: http

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/bank-app

      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /bank-app

      backendRefs:
        - name: my-service
          port: 85

# kubectl apply -f helm install eg oci://docker.io/envoyproxy/gateway-helm\

#   --version v1.1.0 \

#   -n envoy-gateway-system \

#   --create-namespace
 
# kubectl apply -f helm install eg oci://docker.io/envoyproxy/gateway-helm\

#   --version v1.1.0 \

#   -n akash-ns
 
# kubectl apply -f https://github.com/envoyproxy/gateway/releases/download/v1.1.0/install.yaml
