ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ramya-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:
          - path: /nginx
            pathType: Prefix
            backend:
              service:
                name: ramya-service
                port:
                  number: 81
